# sunbather

./: .flake8  .gitignore  LICENSE  MANIFEST.in  README.md  planets.txt  pyproject.toml
.github/workflows/: black.yml  pylint.yml
docs/: api.rst  conf.py  faq.md  glossary.md  index.md  index.rst  installation.md  requirements.in  requirements.txt
examples/: Helium_fits.ipynb  fit_helium.ipynb  predict_UV.ipynb
examples/materials/: TOI2134b_chisqs_fit_z0.csv  TOI2134b_chisqs_fit_z100.csv  TOI2134b_dT_z0.csv  TOI2134b_dT_z100.csv  TOI2134b_sigmaT_z0.csv  TOI2134b_sigmaT_z100.csv  WASP52b_dT.csv  WASP52b_nsig_fit.csv  WASP52b_sigmaT.csv  dbf2.txt  eps_Eri_binned.spec  hotNeptune_EWs.csv  hotNeptune_chisqs.csv  hotNeptune_dT.csv  hotNeptune_helium_mock_spectrum.txt  hotNeptune_sigmaT.csv  planets.txt
src/: RT.py  config.ini  construct_parker.py  construct_parkers.py  convergeT_parker.py  converged_parkers_1D.py  planets.txt  solveT.py  solveT_1D.py  tools.py
src/RT_tables/: Al+10_levels_processed.txt  Al+11_lines_NIST.txt  Al+12_levels_processed.txt  Al+2_levels_processed.txt  Al+2_lines_NIST.txt  Al+4_levels_NIST.txt  Al+4_lines_NIST.txt  Al+5_levels_processed.txt  Al+6_levels_processed.txt  Al+7_levels_NIST.txt  Al+7_levels_processed.txt  Al+7_lines_NIST.txt  Al+8_levels_processed.txt  Al+9_levels_processed.txt  Al+_levels_NIST.txt  Ar+10_levels_NIST.txt  Ar+10_lines_NIST.txt  Ar+11_levels_NIST.txt  Ar+12_levels_processed.txt  Ar+2_lines_NIST.txt  Ar+3_levels_NIST.txt  Ar+4_lines_NIST.txt  Ar+5_levels_NIST.txt  Ar+5_lines_NIST.txt  Ar+6_levels_NIST.txt  Ar+7_levels_NIST.txt  Ar+7_levels_processed.txt  Ar+7_lines_NIST.txt  Ar+9_lines_NIST.txt  Ar_levels_processed.txt  B+_lines_NIST.txt  B_lines_NIST.txt  Be+2_levels_processed.txt  (+255 more)
stellar_SEDs/: GJ1214_binned.spec  GJ176_binned.spec  GJ436_binned.spec  GJ581_binned.spec  GJ674_binned.spec  GJ676A_binned.spec  GJ832_binned.spec  GJ849_binned.spec  HATP12_binned.spec  HATP26_binned.spec  HD40307_binned.spec  HD85512_binned.spec  HD97658_binned.spec  K4_binned.spec  L-678-39_binned.spec  L-98-59_binned.spec  LP-791-18_binned.spec  TOI193_binned.spec  TOI2134.spec  TRAPPIST-1_binned.spec  WASP127_binned.spec  WASP17_binned.spec  WASP43_binned.spec  WASP77A_binned.spec  eps_Eri_binned.spec  solar.spec
tests/: test.py  test_sunbather.py
wiki/: FAQ.md  Glossary.md  Home.md  Installation.md  glossary.md  installation.md
(+666 files in other folders)
