[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sunbather"
version = "1.0.0a1"
# dynamic = ["version"]
dependencies = [
  "numpy >= 1.24.3",
  "pandas >= 1.1.4",
  "matplotlib >= 3.7.1",
  "scipy >= 1.8.0",
  "astropy >= 5.3",
  "p-winds >= 1.3.4",
]
requires-python = ">= 3.9"
authors = [
  {name = "Dion Linssen", email = "d.c.linssen@uva.nl"},
  {name = "Antonija Oklopčić", email = "a.oklopcic@uva.nl"},
]
description = "sunbather"
readme = {file = "README.md", content-type = "text/markdown"}
license = {file = "LICENSE"}
keywords = ["astrophysics"]

[project.urls]
Issues = "https://github.com/antonpannekoek/sunbather/issues"
Repository = "https://github.com/antonpannekoek/sunbather"
