[build-system]
requires = ["setuptools >= 75.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sunbather"
version = "1.0.0a1"
# dynamic = ["version"]
dependencies = [
  "numpy >= 1.24.3, <3",
  "pandas >= 1.1.4, <3",
  "matplotlib >= 3.7.1, <4",
  "scipy >= 1.9.0, <1.14",
  "astropy >= 5.0, <7",
  "p-winds >= 1.3.4, <2",
]
requires-python = ">= 3.9"
authors = [
  {name = "Dion Linssen", email = "d.c.linssen@uva.nl"},
  {name = "Antonija Oklopčić", email = "a.oklopcic@uva.nl"},
]
description = "sunbather"
readme = {file = "README.md", content-type = "text/markdown"}
license = {file = "LICENSE"}
keywords = ["astrophysics"]

[project.urls]
Issues = "https://github.com/antonpannekoek/sunbather/issues"
Repository = "https://github.com/antonpannekoek/sunbather"

[tool.pylint]
max-line-length = 88
